[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Background/quest_background.png" type="Texture" id=1]
[ext_resource path="res://GUI/Quest/Quest.gd" type="Script" id=2]
[ext_resource path="res://Assets/Theme2/close_button_10x10.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/tinyfont.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Assets/Fonts/theme_font/uni_05_53_8px.fnt" type="BitmapFont" id=5]
[ext_resource path="res://GUI/Quest/QuestPanelObject.gd" type="Script" id=6]
[ext_resource path="res://Assets/Other/lock.png" type="Texture" id=7]
[ext_resource path="res://Assets/HUD_And_GUI/quest_panel.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 128, 28 )

[node name="Quest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestPanelObject" type="Panel" parent="."]
margin_left = -140.0
margin_top = -44.0
margin_right = -16.0
margin_bottom = -16.0
rect_min_size = Vector2( 124, 28 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestName" type="Label" parent="QuestPanelObject"]
margin_left = 4.0
margin_top = 2.0
margin_right = 61.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
text = "XXXX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC" type="Label" parent="QuestPanelObject"]
margin_left = 4.0
margin_top = 17.0
margin_right = 61.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 5 )
text = "XXXX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lock" type="Sprite" parent="QuestPanelObject"]
visible = false
position = Vector2( 109, 14 )
texture = ExtResource( 7 )

[node name="CurrentQuest" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -88.0
margin_right = 80.0
margin_bottom = 56.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseQuestPopup" type="TouchScreenButton" parent="CurrentQuest"]
position = Vector2( 146, 3 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CurrentQuest"]
margin_right = 160.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 4 )
text = "QUEST"
align = 1
valign = 1
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="CurrentQuest"]
margin_left = 11.0
margin_top = 20.0
margin_right = 152.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CurrentQuest/ScrollContainer"]

[node name="QuestDetail" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -88.0
margin_right = -82.0
margin_bottom = 56.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuestDetail"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 5 )
text = "QUEST DETAIL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestName" type="Label" parent="QuestDetail"]
margin_left = 11.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 5 )
text = "XYZ1234"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="QuestDetail"]
margin_left = 11.0
margin_top = 35.0
margin_right = 152.0
margin_bottom = 136.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CurrentQuest/CloseQuestPopup" to="." method="_on_CloseQuestPopup_pressed"]
